fix overflow

--- a/app/frontend/src/components/QuestionInput/QuestionInput.module.css
+++ b/app/frontend/src/components/QuestionInput/QuestionInput.module.css
@@ -16,8 +16,6 @@
 .questionInputTextArea {
     width: 100%;
     line-height: 40px;
-    /* margin-top: 35px; */
-    overflow: auto;
 
     textarea::placeholder {
         padding-top: 15px;
